Image scaling issue fixed and aligned

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -105,20 +105,25 @@ header {
 	width: 33.3333%;
 	text-align: center;
 	overflow: hidden;
-	margin: 0px;
+	margin: auto;	
 }
 
 .projectimg {
-	width: 80%;
-	height: auto;
-	margin: 5px 5px;
-	opacity: .8;
-
+	position: relative;
+	width: 70%;
+	padding: 50% 0 0;
+	overflow: hidden;
+	margin: 0px;
+	display: inline-block;
 }
 
-.projectimg::after{
-	height: 80%;
-
+.projectimg img{
+	opacity: 0.8;
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	min-height: 100%;
+	width: 100%;
 }
 
 .projectlogo {
